# jkpRegsitrationPOC

./: .gitignore  .windsurfrules  README.md  gRPC_ARCHITECTURE_GUIDE.md  grpc_instruction.md
benchmarks/: RESULTS.json  RESULTS.md  bench_all.py  bench_concurrent.py  bench_grpc_native.py  bench_network.py  bench_pool.py  bench_proxy.py  bench_robust.py  bench_serialization.py  bench_standalone.py  helpers.py  requirements.txt  results.json  run_all_benchmarks.py
docs/design/: 000-architecture-overview.md  000-scope-document.md  001-architecture-overview.md  002-architectural-choices.md  003-web-hosting-concepts.md  004-grpc-architecture-guide.md  005-coding-standards.md  005-scope-document.md  007-community-engagement.md  008-dotnet-architectural-choices.md  README.md  poc-deployment-review-22-03-2026.md
grpc-minimal-demo/: README.md
grpc-minimal-demo/client/: index.html  package.json
grpc-minimal-demo/server/: pyproject.toml
grpc-minimal-demo/server/app/: grpc_server.py  main.py
grpc-minimal-demo/server/proto/: devotee.proto
jkpRegistrationFULLGRPC/: .dockerignore  .gitignore  README.md  docker-compose.db.yml  docker-compose.yml
jkpRegistrationFULLGRPC/client/: .env  index.html  package.json
jkpRegistrationFULLGRPC/docs/: 006-project-plan.md  008-architectural-recommendations.md  concurrency-and-scaling.md  tech-stack.md
jkpRegistrationFULLGRPC/proto/: README.md  buf.gen.yaml  generate  satsangi.proto
jkpRegistrationFULLGRPC/server/: pyproject.toml
jkpRegistrationFULLGRPC/server/app/: db.py  grpc_server.py  main.py  models.py  store.py
jkpRegistrationFULLGRPC/server/proto/: satsangi.proto
jkpRegistrationFULLGRPC/tests/: README.md  package.json  requirements.txt
jkpRegsitrationPOC/client/: package.json  vite.config.ts
jkpRegsitrationPOC/docs/: README.md
jkpRegsitrationPOC/server/: pyproject.toml  seed.py
jkpRegsitrationPOC/server/app/: db.py  main.py  models.py  store.py
jkpRegsitrationPOC/server/data/: satsangis.json
jkpRegsitrationPOC/server/migrations/: 001_create_devotees.sql  002_create_visits.sql
jkpRegsitrationPOC/tests/: package.json  playwright.config.ts  vitest.config.ts
jkpRegsitrationPOCgrpc/: .gitignore
jkpRegsitrationPOCgrpc/client/: index.html  package.json
jkpRegsitrationPOCgrpc/server/: pyproject.toml
jkpRegsitrationPOCgrpc/server/app/: grpc_server.py  main.py
server/: pyproject.toml
tests/: package.json  playwright.config.ts
(+66 files in other folders)
